[package]
name = "auto_regressive"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.0"
num-complex = { version = "0.4.6", optional = true }
polynomen = { version = "1.1.0", optional = true}
rustfft = "6.2.0"


[features]
default = []
poly_decomp = ["polynomen", "num-complex"]

[dev-dependencies]
float_eq = "1.0.1"
plotters = "0.3.7"
rand = "0.8.5"
rand_distr = "0.4.3"
